# glib-serde

./: Cargo.toml  README.md
.reuse/: dep5
glib-serde-derive/: Cargo.toml
glib-serde-derive/src/: enums.rs  lib.rs  variant_type.rs
src/: enums.rs  error.rs  flags.rs  lib.rs  object_path.rs  signature.rs  variant.rs  variant_builder.rs  variant_dict.rs  variant_type.rs
src/variant/: deserialize.rs  deserializer.rs  mod.rs  serialize.rs  serializer.rs
tests/: enums.rs  variant.rs  variant_type.rs
